--- a/root1.html
+++ b/root1.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>James Bond</title>
+    <link rel="stylesheet" href="flag2.css">
+</head>
+<body>
+    <header>
+        <h1> No Time To Die </h1>
+    </header>
 
+    <main>
+        <section class="intro">
+
+            <p></p>
+            <p> </p>
+            <p>
+            <a href="index.html">Main Page</a>
+            </p>
+        </section>
+</head>
+<body>
+  <title>Interactive Login Box</title>
+  <div class="login-box">
+    <h1>Secure Login</h1>
+    <form id="login-form">
+      <label for="username">Username:</label>
+      <input type="text" id="username" required>
+      <label for="password">Password:</label>
+      <input type="password" id="password" required>
+      <input type="submit" value="Login">
+    </form>
+  </div>
+  <img src="" alt=""</img>
+  <script src="root1.js"></script>
+
+
+</main>
+
+
+</body>
+</html>
