--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@ GNU nano 7.2                                                                    
     <img src="" alt=""</img>
     
   </main>
-  <script src="root1.js"></script>
+  <script src="C:\Users\erick\OneDrive\Desktop\BethelTech_FinalProject\Root\root1.js"></script>
 </body>
 </html>
