--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@ GNU nano 7.2                                                                    
   </head>
 
   <main>
-    <section>
-    <Center><p><a href="index.html">Main Page</a></p></Center>
-    </section>
-
+    <a href="C:\Users\erick\OneDrive\Desktop\BethelTech_FinalProject\Root">PythonGen</a>
     <title>Interactive Login Box</title>
     <div class="login-box">
     <h1>Secure Login</h1>
