--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
-GNU nano 7.2                                                                                                     root1.html                                                                                                            <!DOCTYPE html>
-<html>
-<body>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>James Bond</title>
-    <link rel="stylesheet" href="styles.css">
-    <header>
+    <link rel="stylesheet" href="rootbond.css">
+    <center><header>
       <h1> Welcome to the Root Flag</h1>
-    </header>
+    </header></center>
   </head>
-
-  <main>
-    <a href="C:\Users\erick\OneDrive\Desktop\BethelTech_FinalProject\Root">PythonGen</a>
-    <title>Interactive Login Box</title>
-    <div class="login-box">
-    <h1>Secure Login</h1>
+<body>
+    <center><h1>Login</h1>
     <form id="login-form">
     <label for="username">Username:</label>
     <input type="text" id="username" required>
@@ -23,10 +18,7 @@ GNU nano 7.2                                                                    
     <input type="password" id="password" required>
     <input type="submit" value="Login">
     </form>
-    </div>
-    <img src="" alt=""</img>
-    
-  </main>
-  <script src="C:\Users\erick\OneDrive\Desktop\BethelTech_FinalProject\Root\root1.js"></script>
+    </center>
+    <script src="login.js"></script>
 </body>
 </html>
