--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>James Bond</title>
-    <link rel="stylesheet" href="rootbond.css">
+    <link rel="stylesheet" href="styles.css">
     <center><header>
       <h1> Welcome to the Root Flag</h1>
     </header></center>
