--- a/index.html
+++ b/index.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>James Bond</title>
-    <link rel="stylesheet" href="styles.css">
-    <center><header>
-      <h1> Welcome to the Root Flag</h1>
-    </header></center>
-  </head>
+    <title>Login Page</title>
+    <link rel="stylesheet" href="rootbond.css">
+</head>
 <body>
-    <center><h1>Login</h1>
-    <form id="login-form">
-    <label for="username">Username:</label>
-    <input type="text" id="username" required>
-    <label for="password">Password:</label>
-    <input type="password" id="password" required>
-    <input type="submit" value="Login">
+    <h1>Login</h1>
+    <form id="loginForm" onsubmit="validateCredentials(event)">
+        <label for="username">Username:</label>
+        <input type="text" id="username" required><br>
+        
+        <label for="password">Password:</label>
+        <input type="password" id="password" required><br>
+        <input type="submit" value="Login" onclick="validateCredentials()">
     </form>
-    </center>
     <script src="login.js"></script>
 </body>
 </html>
