--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="rootbond.css">
+    <center><header>Welcome to Project Heracles Laboratory</header></center>
 </head>
 <body>
+    <center><p>Please state your username and password credentials below to access classified material.</p>
     <h1>Login</h1>
     <form id="loginForm" onsubmit="validateCredentials(event)">
         <label for="username">Username:</label>
@@ -17,5 +19,6 @@
         <input type="submit" value="Login" onclick="validateCredentials()">
     </form>
     <script src="login.js"></script>
+    </center>
 </body>
 </html>
