--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="submit" value="Login" onclick="validateCredentials()">
     </form>
     <script src="login.js"></script>
-    <a img="https://summerbodynowdotcom.files.wordpress.com/2018/04/screenshot_20180429-1018062908226264.jpg?w=948"></a>
+    <img src="https://summerbodynowdotcom.files.wordpress.com/2018/04/screenshot_20180429-1018062908226264.jpg?w=948"></img>
     </center>
 </body>
 </html>
