--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <center><header>Welcome to Project Heracles Laboratory</header></center>
 </head>
 <body>
-    <center><p>Please state your username and password credentials below to access classified material.</p>
+    <center>
+    <p><img src="https://summerbodynowdotcom.files.wordpress.com/2018/04/screenshot_20180429-1018062908226264.jpg?w=948"></img></p>
+    <p>Please state your username and password credentials below to access classified material.</p>
     <h1>Login</h1>
     <form id="loginForm" onsubmit="validateCredentials(event)">
         <label for="username">Username:</label>
@@ -19,7 +21,6 @@
         <input type="submit" value="Login" onclick="validateCredentials()">
     </form>
     <script src="login.js"></script>
-    <p><img src="https://summerbodynowdotcom.files.wordpress.com/2018/04/screenshot_20180429-1018062908226264.jpg?w=948"></img></p>
     </center>
 </body>
 </html>
