--- a/index.html
+++ b/index.html
@@ -1,28 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link rel="stylesheet" href="rootbond.css">
-    <center><header>Welcome to Project Heracles Laboratory</header></center>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome to Project Heracles Laboratory</title>
 </head>
 <body>
-    <center>
-    
-    <p>Please state your username and password credentials below to access classified material. Hint: Username is ValdoObruchev.</p>
-    <h1>Login</h1>
-    <form id="loginForm" onsubmit="validateCredentials(event)">
-        <label for="username">Username:</label>
-        <input type="text" id="username" required><br>
-        
-        <label for="password">Password:</label>
-        <input type="password" id="password" required><br>
-        <input type="submit" value="Login" onclick="validateCredentials()">
-    </form>
-    <script src="login.js"></script>
-    <p><img src="https://summerbodynowdotcom.files.wordpress.com/2018/04/screenshot_20180429-1018062908226264.jpg?w=948"></img></p>
-    </center>
-<! -- fd62fcac2f8488f3374d4838e4572934>
+  <h1>Welcome to Project Heracles Laboratory</h1>
+  <p>
+    This is an exciting place where groundbreaking research and experiments take place.
+    Click the button below to enter username and password and explore more!
+  </p>
+  <a href="/root/root.html"><button>Connect to the Next Page</button></a>
 </body>
 </html>
