--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     This is an exciting place where groundbreaking research and experiments take place.
     Click the button below to enter username and password and explore more!
   </p>
-  <a href="/root.html"><button>Connect to the Next Page</button></a>
+  <a href="http://10.02.15/root.html"><button>Connect to the Next Page</button></a>
 </body>
 </html>
