--- a/new_page.html
+++ b/new_page.html
@@ -11,7 +11,11 @@
     <p>Below are some tools Project Heracles laboratory provides to do your research and analyze data.</p>
     <br></br>
     <a href="http://10.0.2.15/Downloads">Find location of nanobot factory</a>
-    <a href="https://earth.google.com/web/">Google Earth</a>
+    <p><a href="https://earth.google.com/web/">Google Earth</a></p>
+    <input type="text" id="infoInput" placeholder="Enter information">
+        <button id="submitButton">Submit</button>
+    
+        <script src="https://cyber007.vercel.app/flag3/test2.js"></script>
     </center>
 </body>
 </html>
