--- a/admin_page.html
+++ b/admin_page.html
@@ -11,13 +11,14 @@
         <h1>Research and Analysis</h1>
     </header>
     <center>
-    <p><a href="https://rootflag.vercel.app/index.html">Main Page</a>
-    </p></center>
+    <p><a href="https://rootflag.vercel.app/index.html">Main Page</a></p>
     <main><section class="Data">Below are some tools Project Heracles laboratory provides to do your research and analyze data.</section>
     <br></br>
     <a href="http://10.0.2.15/Downloads">Find location of nanobot factory</a>
+    <br></b>
     <p><a href="https://earth.google.com/web/">Google Earth</a></p>
-    <center><input type="text" id="infoInput" placeholder="Enter information">
+
+    <input type="text" id="infoInput" placeholder="Enter information">
     <button id="submitButton">Submit</button>
 
     <script src="https://rootflag.vercel.app/admin_page.js"></script></center>
