--- a/admin_username.html
+++ b/admin_username.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="rootbond.css">
-    <center><header>Welcome to Project Heracles Laboratory</header></center>
+    <center><header>Project Heracles</header></center>
 </head>
 <body>
     <center>
     
-    <p>Please state your username and password credentials below to access classified material. Hint: Username is EngineerJohnSmith.</p>
+    <h1>Administrator Page</h1>
     <h1>Login</h1>
     <form id="loginForm" onsubmit="validateCredentials(event)">
         <label for="username">Username:</label>
@@ -20,8 +20,9 @@
         <input type="password" id="password" required><br>
         <input type="submit" value="Login" onclick="validateCredentials()">
     </form>
-    <script src="login.js"></script>
+    <script src="admin_login.js"></script>
     <p><img src="https://summerbodynowdotcom.files.wordpress.com/2018/04/screenshot_20180429-1018062908226264.jpg?w=948"></img></p>
     </center>
+<! -- fd62fcac2f8488f3374d4838e4572934>
 </body>
 </html>
