--- a/smiths_page.html
+++ b/smiths_page.html
@@ -9,8 +9,12 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <center> 
     <p>Smith's Laboratory Files</p>
     <a href="http://10.0.2.15/Downloads">Downloadable Excel File</a>
-    
+    <br></br>
+    <br></br>
+    <a href="https://rootflag.vercel.app/admin_username">Login as Administrator</a>
+    </center>
 </body>
 </html>
