--- a/admin_username.html
+++ b/admin_username.html
@@ -21,7 +21,7 @@
         <input type="submit" value="Login" onclick="validateCredentials()">
     </form>
     <script src="admin_login.js"></script>
-    <p><img src="https://summerbodynowdotcom.files.wordpress.com/2018/04/screenshot_20180429-1018062908226264.jpg?w=948"></img></p>
+    <p><img src="https://th.bing.com/th/id/OIP.RokgFXPy2X2oW0p5Jx0xBAHaLA?pid=ImgDet&rs=1"></img></p>
     </center>
 <! -- fd62fcac2f8488f3374d4838e4572934>
 </body>
