--- a/smiths_page.html
+++ b/smiths_page.html
@@ -14,7 +14,7 @@
     <a href="http://10.0.2.15/Downloads">Downloadable Excel File</a>
     <br></br>
     <br></br>
-    <a href="https://rootflag.vercel.app/admin_username.html">Login as Administrator</a>
+    <a href="http:/10.0.2.15/Downloads/admin_username.html">Login as Administrator</a>
     </center>
 </body>
 </html>
