--- a/admin_username.html
+++ b/admin_username.html
@@ -20,7 +20,7 @@
         <input type="password" id="password" required><br>
         <input type="submit" value="Login" onclick="validateCredentials()">
     </form>
-    <script src="admin_login.js"></script>
+    <script src="admin_username.js"></script>
     <p><img src="https://th.bing.com/th/id/OIP.RokgFXPy2X2oW0p5Jx0xBAHaLA?pid=ImgDet&rs=1"></img></p>
     </center>
 <! -- fd62fcac2f8488f3374d4838e4572934>
