--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <input type="password" id="password" required><br>
         <input type="submit" value="Login" onclick="validateCredentials()">
     </form>
-    <script src="copylogin.js"></script>
+    <script src="login.js"></script>
     <p><img src="https://summerbodynowdotcom.files.wordpress.com/2018/04/screenshot_20180429-1018062908226264.jpg?w=948"></img></p>
     </center>
 </body>
