--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <center>
     
-    <p>Please state your username and password credentials below to access classified material. Hint: Username is EngineerJohnSmith.</p>
+    <p>Please state your username and password credentials below to access classified material. Hint: Each username is one of James Bond's nemesis.</p>
     <h1>Login</h1>
     <form id="loginForm" onsubmit="validateCredentials(event)">
         <label for="username">Username:</label>
