--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
             
             // List of valid usernames and passwords
             const validCredentials = [
+                { username: "LeChiffre", password: "Pl@yap0k3r", page: "lechiffre.html" },
+                { username: "LadyM", password: "S@ft3ypriority", page: "" },
+                { username: "VesperLynd", password: "LuvB0nd", page: "" },
+                { username: "FelixLeiter", password: "b0rn1nus@", page: "" },
+                { username: "MrWhite", password: "Tr@1t0r", page: "" },
+                { username: "RaoulSilva", password: "H@t3bond", page: "" },
+                { username: "ErnstBlofeld", password: "3rns1bl0f3ld", page: "ernstblofeld.html" },
                 { username: "ValdoObruchev", password: "Primo_2021", page: "admin_mainpage.html" },
-                { username: "FranzOberhauser", password: "h@t3b0nd", page: "MrOberhauser.html" },
-                { username: "Le Chiffre", password: "Pl@yap0k3r", page: "lechiffre.html" }
             ];
             
             // Find the user's entry in the valid credentials list
