--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <link rel="stylesheet" href="rootbond.css">
+    <center><header>Welcome to Project Heracles Laboratory</header></center>
     <script>
         function validateCredentials(event) {
             event.preventDefault();
@@ -43,5 +47,6 @@
         
         <button type="submit">Login</button>
     </form>
+    <p><img src="https://summerbodynowdotcom.files.wordpress.com/2018/04/screenshot_20180429-1018062908226264.jpg?w=948"></img></p>
 </body>
 </html>
