--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     </script>
 </head>
 <body>
+    <br></br>
+    <center>
     <form onsubmit="validateCredentials(event)">
         <label for="username">Username:</label>
         <input type="text" id="username" required><br><br>
@@ -48,5 +50,6 @@
         <button type="submit">Login</button>
     </form>
     <p><img src="https://summerbodynowdotcom.files.wordpress.com/2018/04/screenshot_20180429-1018062908226264.jpg?w=948"></img></p>
+    </center>
 </body>
 </html>
