--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 <body>
     <br></br>
     <center>
+        <p>Please state your username and password credentials below to access classified material. Hint: Each username is one of James Bond's nemesis.</p>
+    <br></br>
     <form onsubmit="validateCredentials(event)">
         <label for="username">Username:</label>
         <input type="text" id="username" required><br><br>
