--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <br></br>
     <center>
-        <p>Please state your username and password credentials below to access classified material. Hint: Each username is one of James Bond's nemesis.</p>
+        <p>Please state your username and password credentials below to access classified material. Hint: Username's are names of James Bond characters.</p>
     <br></br>
     <form onsubmit="validateCredentials(event)">
         <label for="username">Username:</label>
