--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <br></br>
     <center>
-        <p>Please state your username and password credentials below to access classified material. Hint: Usernames are different James Bond movie characters.</p>
+        <p>Please state your username and password credentials below to access classified material. Hint: Usernames are my friends and foes.</p>
     <br></br>
     <form onsubmit="validateCredentials(event)">
         <label for="username">Username:</label>
