--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="rootbond.css">
     <center><header>Welcome to Project Heracles Laboratory</header></center>
-    <script>credentials.js
-    </script>
+    <script>credentials.js</script>
 </head>
 <body>
     <br></br>
