--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="rootbond.css">
     <center><header>Welcome to Project Heracles Laboratory</header></center>
-    <script src="login.js"></script>
+    <script src="credentials.js"></script>
 </head>
 <body>
     <br></br>
