--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <br></br>
     <center>
-        <p>Please state your username and password credentials below to access classified material. Hint: Usernames are my friends or foes.</p>
+        <p>Please state your username and password credentials below to access classified material. Hint: Find me in the source.</p>
     <br></br>
     <form id="loginForm">
         <label for="username">Username:</label>
