--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <br></br>
     <center>
-        <p>Please state your username and password credentials below to access classified material. Hint: Find me in the source.</p>
+        <p>Bond's mission is to stop Lyutsifer Safin's nanobots from taking over the world. Find the location of the nanobot factory farm and destroy it. To find the location you need to access the following credentials. Hint: Find me in the source.</p>
     <br></br>
     <form id="loginForm">
         <label for="username">Username:</label>
