admin_mainpage.html

--- a/admin_mainpage.html
+++ b/admin_mainpage.html
@@ -12,9 +12,10 @@
     </header>
     <center>
     <p><a href="https://rootflag.vercel.app/index.html">Main Page</a></p>
-    <main><section class="Data">Below are some tools Project Heracles laboratory provides to do your research and analyze data.</section>
+    <main><section class="Data">Below are some tools Project Heracles Laboratory provides to do your research and analyze data.</section>
     <br></br>
     <a href="http://10.0.2.15/Downloads">Find location of nanobot factory</a>
+        <p>HSM Dragon missile ship is awaiting your orders!! Please use the following coordinates to assist in the attack: Lat:47.266060 Long: 8.650860</p>
     <br></b>
     <p><a href="https://earth.google.com/web/">Google Earth</a></p>
 
