--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <br></br>
     <center>
-        <p>Bond's mission is to stop Lyutsifer Safin's nanobots from taking over the world. Find the location of the nanobot factory farm and destroy it. To find the location you need to access the following credentials. Hint: Find me in the source.</p>
+        <p>The world is in danger! We've learned that Lyutsifer Safin, your arch nemesis, has stolen biochemicals from a laboratory and is harvesting them in a factory to commit mass murders.</p>
+        <p>Your mission is to find, then apprehend or kill Lyutsifer Safin and destroy the factory by all means possible. Most likely Safin will be at the factory. To access the right coordinates of the factory, access the credentials below. Hint: I am in the source.</p>
     <br></br>
     <form id="loginForm">
         <label for="username">Username:</label>
@@ -22,7 +23,7 @@
     </form>
     <p><img src="https://summerbodynowdotcom.files.wordpress.com/2018/04/screenshot_20180429-1018062908226264.jpg?w=948"></img></p>
 
-        <! --Mr. White's Financial Consultant decides to gamble the K3ys0fp0w3r>
+        <! --The terrorist financier decides to gamble the K3ys0fp0w3r at the Casino Royale Hotel>
     </center>
 </body>
 </html>
