--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <br></br>
     <center>
-        <p>The world is in danger! We've learned that Lyutsifer Safin, your arch nemesis, has stolen biochemicals from a laboratory and is harvesting them in a factory to commit mass murders.</p>
-        <p>Your mission is to find, then apprehend or kill Lyutsifer Safin and destroy the factory by all means possible. Most likely Safin will be at the factory. To access the right coordinates of the factory, access the credentials below. Hint: I am in the source.</p>
+        <p>The world is in danger! We've learned that Lyutsifer Safin, your arch nemesis, has stolen biochemicals from a laboratory and is harvesting these nanobots in a factory to commit mass murders.</p>
+        <p>Your mission is to apprehend or kill Lyutsifer Safin and destroy the factory by all means possible. Most likely Safin will be at the factory.</p>
+        <p>To access the right coordinates of the factory, access the credentials below. Hint: I am in the source.</p>
     <br></br>
     <form id="loginForm">
         <label for="username">Username:</label>
