--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </form>
     <p><img src="https://summerbodynowdotcom.files.wordpress.com/2018/04/screenshot_20180429-1018062908226264.jpg?w=948"></img></p>
 
-        <! --The terrorist financier decides to gamble the K3ys0fp0w3r at the Casino Royale Hotel>
+        <! --The Casino Royale terrorist financier decides to gamble the K3ys0fp0w3r>
     </center>
 </body>
 </html>
