--- a/lechiffre.html
+++ b/lechiffre.html
@@ -11,7 +11,7 @@
 <body>
     <center> 
     <h1>Le Chiffre's Financial Database</h1>
-    <p>If you wish to access Lyutsifer Safin's location of nanobot farms, please go to Admin page! Hint: Click Le Chiffre's Poker Card link.</p>
+    <p>Le Chiffre's access is the first step. If you want access to the final location, go to Valdo Obruchev's page. He was the mad scientist that helped Safin devise this scheme. For starters, click below on Le Chiffre's Poker Card. </p>
     <a href="https://rootflag.vercel.app/">Login Page</a>
     <br><br>
     <p>Le Chiffre's Poker Card</p>
