--- a/admin_mainpage.html
+++ b/admin_mainpage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Research and Analysis</h1>
+        <h1>Administrator Page: Research and Analysis</h1>
     </header>
     <center>
     <p><a href="https://rootflag.vercel.app/index.html">Main Page</a></p>
